<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    tools:ignore="ScrollViewSize,SpUsage,RtlHardcoded">
    <include layout="@layout/title_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:layout_marginTop="@dimen/dp_10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/recruit_title"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/recruit_title_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_recruit_title"
                    android:textSize="@dimen/dp_15"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/company_name"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/company_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_company_name"
                    android:textSize="@dimen/dp_15"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/salary_scope"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/start_salary_et"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/start_salary"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/line"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/end_salary_et"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/end_salary"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/seller_address"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/seller_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_company_address"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/recruit_person_number"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/recruit_person_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_person_number"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/contact_phone_number"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/contact_phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_contact_phone_number"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/work_experience"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/work_experience_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_work_experience"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/education"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/education_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_education"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_15"
                    android:text="@string/company_person_number"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_10" />
                <EditText
                    android:id="@+id/company_person_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:maxLines="1"
                    android:hint="@string/input_company_person_number"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:background="@null"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/gray_line_2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>