<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:ignore="InefficientWeight,SpUsage,RtlHardcoded,RtlSymmetry">
    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_27">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md__defaultBackground"
                android:textSize="@dimen/dp_15"
                android:text="@string/area"
                android:layout_below="@id/input_password_layout"
                android:layout_alignParentLeft="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md__defaultBackground"
                android:textSize="@dimen/dp_15"
                android:text="@string/area_code"
                android:layout_below="@id/input_password_layout"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_25">
            <EditText
                android:id="@+id/input_register_username_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/input_mobile_num"
                android:paddingLeft="@dimen/dp_5"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_15"
                android:background="@null"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@color/orange_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_25">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <EditText
                    android:id="@+id/input_register_verify_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:hint="@string/verify_code"
                    android:paddingLeft="@dimen/dp_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_15"
                    android:background="@null"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/get_verify_code_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_verify_code"
                    android:textSize="@dimen/dp_15"
                    android:textColor="@color/orange_text"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@color/orange_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_25">
            <EditText
                android:id="@+id/register_password_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:hint="@string/input_password"
                android:paddingLeft="@dimen/dp_5"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_15"
                android:background="@null" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_2"
                android:background="@color/orange_text"/>
        </LinearLayout>

        <Button
            android:id="@+id/register_next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/rect_corner_orange"
            android:layout_marginTop="@dimen/dp_60"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_15"
            android:text="@string/next"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_15">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/dp_15"
                android:text="@string/already_read"/>
            <TextView
                android:id="@+id/autoinsy_city_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_text"
                android:textSize="@dimen/dp_15"
                android:text="@string/protocol"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:orientation="horizontal"
        android:background="@mipmap/foot_bg"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone_number"
            android:textSize="@dimen/dp_20"
            android:textColor="@color/orange_text"
            android:layout_marginTop="@dimen/dp_10"/>
    </LinearLayout>
</LinearLayout>